# tp_2026

./: .config
altynbaeva.aigul/T4/: circle.cpp  circle.h  composite_shape.cpp  composite_shape.h  main.cpp  rectangle.cpp  rectangle.h  shape.h
dvoretskiy.aleksey/T0/: main.cpp
fomina.valya/T4/: composite_shape.cpp  composite_shape.h  main.cpp  point.h  rectangle.cpp  rectangle.h  shape.h  square.cpp  square.h
koropov.vitaly/T4/: main.cpp
maerchuk.danila/T2/: data_struct.cpp  main.cpp
malevanaya.maria/F0/: HashTable.hpp  TextProcessor.hpp
muslimov.ramis/T4/: CMakeLists.txt  test_main.cpp
muslimov.ramis/T4/include/: compositeShape.hpp  ellipse.hpp  point.hpp  rectangle.hpp  shape.hpp
muslimov.ramis/T4/src/: compositeShape.cpp  rectangle.cpp
muslimov.ramis/T4/tests/: test_composite.cpp  test_ellipse.cpp  test_main.cpp  test_rectangle.cpp
rtischev.gleb/F0/: Makefile  dict.cpp  dict.hpp  main.cpp  test_output.txt
rtischev.gleb/T0/: main.cpp
skorohod.andrey/T2/: data_struct.cpp  main.cpp
skorohod.andrey/T3/: main.cpp  test.txt  utils.cpp  utils.hpp
tomilova.elizaveta/T4/: circle.cpp  circle.hpp  composit_shape.hpp  composite_shape.cpp  mainp.cpp  point.hpp  rectangle.cpp  rectangle.hpp  shape.hpp
tsuremichev.gleb/T0/: main.cpp
tsuremichev.gleb/T2/: dataStruct.cpp
tsuremichev.gleb/T4/: shape.h
uryev.denis/T2/: T2.hpp  main.cpp
